tests/script_errors/lexer_unterminated_extractor2/error.txt
Error: 
    1 | match event of
    2 |   case %{ msg ~= glob|info*l } => true
      |                      ^^^^^^^^^^^^^^^^^ It looks like you forgot to terminate an extractor with a closing '|'
